--- a/Just-For-Fun.html
+++ b/Just-For-Fun.html
@@ -15,7 +15,7 @@
 		<meta property="og:image:type"   content="image/jpeg"/>
         <meta property="og:image:width"  content="800"/>
         <meta property="og:image:height" content="420"/>
-        <meta property="og:image" content="../../../../../../../../ph-show218.meow-share.com/images/result/20171223/result_5624_186676971907748.jpg"/>
+        <meta property="og:image" content="http://ph-show218.meow-share.com/images/result/20171223/result_5624_186676971907748.jpg"/>
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link href="css/bootstrap.css" rel="stylesheet">
  
