--- a/results-and-winnings.html
+++ b/results-and-winnings.html
@@ -399,7 +399,7 @@ function openNav() {
 	<br>
 	<img src="images/6-Digit.png" alt="PCSO 6-Digit Game result"style="width:60%;max-width:120px;">
 	<h2 class="yf"><span itemprop="entry-title"><strong>6-Digit Game result</strong></span></h2>
-	<h4><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span></h4>
+	<h4><span class="ball">6</span><span class="ball">5</span><span class="ball">7</span><span class="ball">3</span><span class="ball">3</span><span class="ball">3</span></h4>
 	<h4 class="yf"><span itemprop="entry-content"><b>December 23, 2017</b></span></h4>
 	</div>
 	<div class="half">
