--- a/results-and-winnings.html
+++ b/results-and-winnings.html
@@ -293,7 +293,7 @@ function openNav() {
 
 	<tr>
 	<td class="yf" style="text-align:center; vertical-align:middle;"><b>11:30 AM</b></td>
-	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td>
+	<td><span class="ball text-xl">9</span>&nbsp;&nbsp;<span class="ball text-xl">9</span>&nbsp;&nbsp;<span class="ball text-xl">6</span></td>
 	</tr>
 
 	<!-- SWERTRES 4 PM -->
@@ -355,7 +355,7 @@ function openNav() {
 
 	<tr>
 	<td class="yf" style="text-align:center; vertical-align:middle;"><b>12:30 PM</b></td>
-	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td>
+	<td><span class="ball text-xl">25</span>&nbsp;&nbsp;<span class="ball text-xl">23</span></td>
 	</tr>
 
 	<!-- EZ 2 - 9 PM -->
