--- a/results-and-winnings/EZ-2-lotto-results.html
+++ b/results-and-winnings/EZ-2-lotto-results.html
@@ -105,7 +105,7 @@ function openNav() {
 	<tr><td>11:30, AM</td>
 	<td><span class="ball text-xl">25</span>&nbsp;&nbsp;<span class="ball text-xl">23</span></td></tr>
 	<tr><td>12:30 PM</td>
-	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td></tr>
+	<td><span class="ball text-xl">29</span>&nbsp;&nbsp;<span class="ball text-xl">7</span></td></tr>
 	<tr><td>2:00 PM</td>
 	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td></tr>
 	</table>
