--- a/results-and-winnings/Swertres-results.html
+++ b/results-and-winnings/Swertres-results.html
@@ -105,7 +105,7 @@ function openNav() {
 	<tr><td>11:30 AM</td>
 	<td><span class="ball text-xl">9</span>&nbsp;&nbsp;<span class="ball text-xl">9</span>&nbsp;&nbsp;<span class="ball text-xl">6</span></td></tr>
 	<tr><td>12:30 PM</td>
-	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td></tr>
+	<td><span class="ball text-xl">0</span>&nbsp;&nbsp;<span class="ball text-xl">5</span>&nbsp;&nbsp;<span class="ball text-xl">8</span></td></tr>
 	<tr><td>2 PM</td>
 	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td></tr>
 	</table>
