--- a/results-and-winnings/EZ-2-lotto-results.html
+++ b/results-and-winnings/EZ-2-lotto-results.html
@@ -107,7 +107,7 @@ function openNav() {
 	<tr><td>12:30 PM</td>
 	<td><span class="ball text-xl">29</span>&nbsp;&nbsp;<span class="ball text-xl">7</span></td></tr>
 	<tr><td>2:00 PM</td>
-	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td></tr>
+	<td><span class="ball text-xl">27</span>&nbsp;&nbsp;<span class="ball text-xl">23</span></td></tr>
 	</table>
 	
 	<p>To win, you need to match correctly all the two (2) winning numbers in <b>exact</b> order.</p>
