--- a/results-and-winnings/Swertres-results.html
+++ b/results-and-winnings/Swertres-results.html
@@ -99,7 +99,7 @@ function openNav() {
 	<br>
 	<p>The <abbr title="Philippine Charity Sweepstakes Office">PCSO</abbr> Swertres draws are held three times everyday, every 11:00 am, 4 pm and 9 pm.</p>
 
-		<h2 style="color:#4B77BE">NO DRAW TODAY, MERRY CHRISTMAS EVERYONE!</h2>
+		<h2 style="color:#DC3023">NO DRAW TODAY, MERRY CHRISTMAS EVERYONE!</h2>
 		
 	<h2 style="color:#4B77BE">Monday, December 25, 2017</time></h2>
 	<table class="table" style="box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:6px; width:100%">
