--- a/Swertres-results/December-21-2017.html
+++ b/Swertres-results/December-21-2017.html
@@ -77,6 +77,17 @@ function openNav() {
 	</nav>
 <div class="row" style="max-width:1200px; margin:auto">
 	<div class="main">
+		
+		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<!-- Small -->
+	<ins class="adsbygoogle"
+	style="display:block"
+	data-ad-client="ca-pub-8489405167836126"
+	data-ad-slot="9196104101"
+	data-ad-format="auto"></ins>
+	<script>
+	(adsbygoogle = window.adsbygoogle || []).push({});
+	</script>
 	
 	<h1 class="capital" style="color:#4B77BE"><strong>Swertres Result Today</strong></h1>
 	<br>
@@ -160,6 +171,17 @@ function openNav() {
     </div>
     
   	<div class="side">
+		
+		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  	<!-- Small -->
+  	<ins class="adsbygoogle"
+  	style="display:block"
+  	data-ad-client="ca-pub-8489405167836126"
+  	data-ad-slot="9196104101"
+  	data-ad-format="auto"></ins>
+  	<script>
+  	(adsbygoogle = window.adsbygoogle || []).push({});
+  	</script><br>
   	
 	<div class="MyS" style="padding:16px; border:1px solid #ccc; border-radius:5px">
 	<div>
@@ -191,7 +213,17 @@ function openNav() {
 	"url": "https://lottoinfo.ph/Swertres-results/December-21-2017",
 	"urlTemplate": "https://lottoinfo.ph/Swertres-results/December-21-2017"}}</script>
 	
-	
+	<div style="text-align:center">
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<!-- Small -->
+	<ins class="adsbygoogle"
+	style="display:block"
+	data-ad-client="ca-pub-8489405167836126"
+	data-ad-slot="9196104101"
+	data-ad-format="auto"></ins>
+	<script>
+	(adsbygoogle = window.adsbygoogle || []).push({});
+	</script></div>
 	
 <div class="row footer" style="background:#2d89ef">
 <div class="side">
@@ -244,7 +276,17 @@ function openNav() {
  <p><a href="mailto:hello@lottoinfo.ph">Contact Us</a></p>
 </div></div>
 
-
+   <div style="text-align:center">
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<!-- Small -->
+	<ins class="adsbygoogle"
+	style="display:block"
+	data-ad-client="ca-pub-8489405167836126"
+	data-ad-slot="9196104101"
+	data-ad-format="auto"></ins>
+	<script>
+	(adsbygoogle = window.adsbygoogle || []).push({});
+	</script></div>
 
 <div style="background:#2d89ef; border-top: 1px solid #FBFCFC; display:table; clear:both; padding:0; text-align:center; width:100%;">
 <h4 style="color:#EEEEEE; font-size:15px"><b>&copy; Lotto Info Philippines</b></h4>
