--- a/results-and-winnings/Super-lotto-6-49-results.html
+++ b/results-and-winnings/Super-lotto-6-49-results.html
@@ -144,6 +144,18 @@ function closeNav() {
      <div class="row fr">
 	     
 	     <div class="tab blue">
+     <input id="dec24" type="radio" name="t">
+     <label for="dec24">December 24, 2017</label>
+     <div class="tab-content">
+     <div class="jackpot">
+     <p style="text-align:center"><span class="ball text-xl">5</span><span class="ball text-xl">35</span><span class="ball text-xl">31</span><span class="ball text-xl">21</span><span class="ball text-xl">10</span><span class="ball text-xl">4</span></p>
+     <h4>Jackpot Prize : &#8369;28,806,157</h4>
+     <h4>Number of Winners : 0</h4>
+     </div>
+     </div>
+     </div>
+	     
+	     <div class="tab blue">
      <input id="dec21" type="radio" name="t">
      <label for="dec21">December 21, 2017</label>
      <div class="tab-content">
