--- a/results-and-winnings.html
+++ b/results-and-winnings.html
@@ -184,13 +184,13 @@ function openNav() {
 	<br>
 	<img src="images/6-55.png" alt="Grand Lotto 6/55 result"style="width:60%;max-width:120px;">
 	<h2 class="yf"><span itemprop="entry-title"><strong>Grand lotto 6/55 result</strong></span></h2>
-	<h4><span class="ball">3</span><span class="ball">13</span><span class="ball">11</span><span class="ball">25</span><span class="ball">4</span><span class="ball">18</span></h4>
-	<h4 class="yf"><span itemprop="entry-content"><b>December 23, 2017</b></span></h4>
+	<h4><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span></h4>
+	<h4 class="yf"><span itemprop="entry-content"><b>December 27, 2017</b></span></h4>
 	</div>
 	<div class="half">
 	<div class="jackpot">
-	<h4>Jackpot Prize : &#8369;29,700,000</h4>
-	<h4>Number of Winners : 0</h4>
+	<h4>Jackpot Prize : &#8369;</h4>
+	<h4>Number of Winners : ?</h4>
 	</div><a name="49Result"></a>
 	<h4 style="text-align:center;"><a href="results-and-winnings/Grand-lotto-6-55-results.html" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">view previous results</a></h4>
 	<br>
@@ -236,13 +236,13 @@ function openNav() {
 	<br>
 	<img src="images/6-45.png" alt="Mega Lotto 6/45 results" style="width:60%;max-width:120px;">
 	<h2 class="yf"><span itemprop="entry-title"><strong>Mega lotto 6/45 result</strong></span></h2>
-	<h4><span class="ball">11</span><span class="ball">40</span><span class="ball">23</span><span class="ball">2</span><span class="ball">28</span><span class="ball">17</span></h4>
-	<h4 class="yf"><span itemprop="entry-content"><b>December 22, 2017</b></span></h4>
+	<h4><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span></h4>
+	<h4 class="yf"><span itemprop="entry-content"><b>December 27, 2017</b></span></h4>
 	</div>
 	<div class="half">
 	<div class="jackpot">
-	<h4>Jackpot Prize : &#8369;8,910,000</h4>
-	<h4>Number of Winners : 0</h4>
+	<h4>Jackpot Prize : &#8369;</h4>
+	<h4>Number of Winners : ?</h4>
 	</div><a name="42Result"></a>
 	<h4 style="text-align:center;"><a href="results-and-winnings/Mega-lotto-6-45-results.html" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">view previous results</a></h4>
 	<br>
@@ -378,8 +378,8 @@ function openNav() {
 	<br>
 	<img src="images/4-Digit.png" alt="PCSO 4-Digit Game result"style="width:60%;max-width:120px;">
 	<h2 class="yf"><span itemprop="entry-title"><strong>4-Digit Game result</strong></span></h2>
-	<h4><span class="ball">5</span>&nbsp;<span class="ball">4</span>&nbsp;<span class="ball">7</span>&nbsp;<span class="ball">1</span></h4>
-	<h4 class="yf"><span itemprop="entry-content"><b>December 22, 2017</b></span></h4>
+	<h4><span class="ball">?</span>&nbsp;<span class="ball">?</span>&nbsp;<span class="ball">?</span>&nbsp;<span class="ball">?</span></h4>
+	<h4 class="yf"><span itemprop="entry-content"><b>December 27, 2017</b></span></h4>
 	</div>
 	<div class="half">
 	<div class="jackpot">
