--- a/results-and-winnings/Swertres-results.html
+++ b/results-and-winnings/Swertres-results.html
@@ -99,15 +99,15 @@ function openNav() {
 	<br>
 	<p>The <abbr title="Philippine Charity Sweepstakes Office">PCSO</abbr> Swertres draws are held three times everyday, every 11:00 am, 4 pm and 9 pm.</p>
 				
-	<h2 style="color:#4B77BE">Wednesday, December 27, 2017</time></h2>
+	<h2 style="color:#4B77BE">Thursday, December 28, 2017</time></h2>
 	<table class="table" style="box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:6px; width:100%">
 	<thead><tr><th>TIME OF DRAW</th><th>RESULT</th></tr></thead>
 	<tr><td>11 AM</td>
-	<td><span class="ball text-xl">8</span>&nbsp;&nbsp;<span class="ball text-xl">2</span>&nbsp;&nbsp;<span class="ball text-xl">4</span></td></tr>
+	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td></tr>
 	<tr><td>4 PM</td>
-	<td><span class="ball text-xl">8</span>&nbsp;&nbsp;<span class="ball text-xl">6</span>&nbsp;&nbsp;<span class="ball text-xl">0</span></td></tr>
+	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td></tr>
 	<tr><td>9 PM</td>
-	<td><span class="ball text-xl">2</span>&nbsp;&nbsp;<span class="ball text-xl">8</span>&nbsp;&nbsp;<span class="ball text-xl">4</span></td></tr>
+	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td></tr>
 	</table>
 	
 	<p>To win, you need to match correctly all the three (3) winning numbers in <b>exact</b> order.</p>
@@ -231,7 +231,7 @@ function openNav() {
     <div style="padding:16px; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:6px; width:100%; max-width:500px">
     <p style="font-size: 17px"><b>Related searches for this topic :</b></p>
     <div class="scroll">
-    <p style="font-size:15px">'Swertes result today dec 27' - 'swertres 11am result December 27' - 'swertres 4pm result december 27' - 'swertres 9pm result december 27' - lotto result dec 27 2017' - 'suertres 11a m result' - 'PCSO result december 27 2017' - 'swertres dec 27 2017' - 'suertres 4p m result' - 'PCSO lotto result dec 27 2017' - 'PCSO result 11am december 27 2017' - 'suertres 9p m result' - 'PCSO result dec 27 2017' - 'PCSO swertres result december 27 2017' - 'PCSO Swertres dec 27 2017'</p>
+    <p style="font-size:15px">'Swertes result today dec 28' - 'swertres 11am result December 28' - 'swertres 4pm result december 28' - 'swertres 9pm result december 28' - lotto result dec 28 2017' - 'suertres 11a m result' - 'PCSO result december 28 2017' - 'swertres dec 28 2017' - 'suertres 4p m result' - 'PCSO lotto result dec 28 2017' - 'PCSO result 11am december 28 2017' - 'suertres 9p m result' - 'PCSO result dec 28 2017' - 'PCSO swertres result december 28 2017' - 'PCSO Swertres dec 28 2017'</p>
     </div></div></div><br>
     
     <h3 style="color:#4B77BE;"><strong>How To Claim Swertres Prize?</strong></h3>
