--- a/results-and-winnings/EZ-2-lotto-results.html
+++ b/results-and-winnings/EZ-2-lotto-results.html
@@ -99,15 +99,15 @@ function openNav() {
 	<br>
 	<p>The <abbr title="Philippine Charity Sweepstakes Office">PCSO</abbr> EZ 2 Lotto draws are held three times everyday, every 11:00 am, 4 pm and 9 pm.</p>
 
-	<h2 style="color:#4B77BE">Thursday, December 28, 2017</time></h2>
+	<h2 style="color:#4B77BE">Friday, December 29, 2017</time></h2>
 	<table class="table" style="box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:6px; width:100%">
 	<thead><tr><th>TIME OF DRAW</th><th>RESULT</th></tr></thead>
 	<tr><td>11 AM</td>
-	<td><span class="ball text-xl">24</span>&nbsp;&nbsp;<span class="ball text-xl">17</span></td></tr>
+	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td></tr>
 	<tr><td>4 PM</td>
-	<td><span class="ball text-xl">27</span>&nbsp;&nbsp;<span class="ball text-xl">15</span></td></tr>
+	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td></tr>
 	<tr><td>9 PM</td>
-	<td><span class="ball text-xl">1</span>&nbsp;&nbsp;<span class="ball text-xl">20</span></td></tr>
+	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td></tr>
 	</table>
 	
 	<p>To win, you need to match correctly all the two (2) winning numbers in <b>exact</b> order.</p>
