--- a/results-and-winnings.html
+++ b/results-and-winnings.html
@@ -244,14 +244,14 @@ function openNav() {
 
 	<tr>
 	<td class="yf" style="text-align:center; vertical-align:middle;"><b>11 AM</b></td>
-	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td>
+	<td><span class="ball text-xl">2</span>&nbsp;&nbsp;<span class="ball text-xl">2</span>&nbsp;&nbsp;<span class="ball text-xl">6</span></td>
 	</tr>
 
 	<!-- SWERTRES 4 PM -->
 
 	<tr>
 	<td class="yf" style="text-align:center; vertical-align:middle;"><b>4 PM</b></td>
-	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td>
+	<td><span class="ball text-xl">6</span>&nbsp;&nbsp;<span class="ball text-xl">7</span>&nbsp;&nbsp;<span class="ball text-xl">5</span></td>
 	</tr>
 	
 	<!-- SWERTRES 9 PM -->
@@ -299,14 +299,14 @@ function openNav() {
 
 	<tr>
 	<td class="yf" style="text-align:center; vertical-align:middle;"><b>11 AM</b></td>
-	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td>
+	<td><span class="ball text-xl">12</span>&nbsp;&nbsp;<span class="ball text-xl">7</span></td>
 	</tr>
 
 	<!-- EZ 2 - 4 PM -->
 
 	<tr>
 	<td class="yf" style="text-align:center; vertical-align:middle;"><b>4 PM</b></td>
-	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td>
+	<td><span class="ball text-xl">5</span>&nbsp;&nbsp;<span class="ball text-xl">13</span></td>
 	</tr>
 
 	<!-- EZ 2 - 9 PM -->
