--- a/pcso-lotto-and-games/Swertres.html
+++ b/pcso-lotto-and-games/Swertres.html
@@ -159,8 +159,8 @@ function closeNav() {
     <h1 style="color:#4B77BE"><strong>How to play Swertres Lotto?</strong></h1>
     <p>Playing PCSO Swertres Lotto is simple. Go to any authorized PCSO lotto outlet and get your PCSO Swertres Lotto playslip and mark 3 digit numbers (from numbers 0 to 9) you can choose three same numbers (Example: <span class="ball">3</span><span class="ball">3</span><span class="ball">3</span>). You will pay &#8369;10 for every standard combination play.</p>
     <p>You can also play the <b>Rambolito</b>.</p>
-    <p>To play this game, you must be 18 years old or above.</p>
-    <h2 style="color:#4B77BE"><strong>How does Rambolito works?</strong></h2>
+    <p id="rambolito">To play this game, you must be 18 years old or above.</p>
+    <a href="#rambolito" title="How does Rambolito works?"><h2 style="color:#4B77BE"><strong>How does Rambolito works?</strong></h2></a>
 	<p>In rambolito, the system will automatically combine all the different possible combinations of your chosen 3 numbers. Giving you more number combinations.</p>
 	<p><b>Rambolito 6</b><br>In rambolito, If your chosen number combination is composed of three (3) different numbers, it will automatically fall under <i>Rambolito 6</i>.</p>
 	<p>Example: If your chosen number combination is <span class="ball">3</span><span class="ball">4</span><span class="ball">5</span></p>
@@ -178,19 +178,19 @@ function closeNav() {
     <br><span class="ball">1</span><span class="ball">1</span><span class="ball">2</span>
     <br><span class="ball">1</span><span class="ball">2</span><span class="ball">1</span>
     <br><span class="ball">2</span><span class="ball">1</span><span class="ball">1</span>
-    <br>Giving you 3 chances to match the winning numbers.</p>
-    <h2 style="color:#4B77BE"><strong>How to win Swertres?</strong></h2>
-    <p>To win, you need to match correctly all the three (3) winning numbers in exact order.</p>
-    <h3 style="color:#4B77BE"><strong>How much can I win?</strong></h3>
+    <br id="HowToWin">Giving you 3 chances to match the winning numbers.</p>
+    <a href="#HowToWin" title="How to win Swertres?"><h2 style="color:#4B77BE"><strong>How to win Swertres?</strong></h2></a>
+    <p id="win">To win, you need to match correctly all the three (3) winning numbers in exact order.</p>
+    <a href="#win" title="How much can I win in Swertres?"><h3 style="color:#4B77BE"><strong>How much can I win?</strong></h3></a>
     <p>Standard play = &#8369;4,500
-    <br>Rambolito 3 = &#8369;1,500
+    <br id="Result">Rambolito 3 = &#8369;1,500
     <br>Rambolito 6 = &#8369;750</p>
 
-    <h3 style="color:#4B77BE"><strong>Where can I see the Swertres Lotto results?</strong></h3>
-    <p>The draws is televise in PTV 4. You can also find the official and verified Swertres Lotto results right here on the LottoInfo.ph website. Just head to the Swertres Lotto draw results page. The winning numbers are posted once the draw results have been verified and confirmed. However, we still encourage you to visit the official PCSO website if you still want to verify the game results there.</p>
-    <p>The draws are held three times a day, every 11:00 am, 4 pm and 9 pm.</p>
+    <a href="#Result" title="Where can I see the Swertres results"><h3 style="color:#4B77BE"><strong>Where can I see the Swertres Lotto results?</strong></h3></a>
+    <p>The draws is televise in PTV 4. You can also find the official and verified Swertres Lotto results right here on the LottoInfo.ph website. Just head to the <a href="../results-and-winnings/Swertres-results.html" title="Swertres Result Today" style="color:#2d89ef; text-decoration:none">Swertres Lotto draw results page</a>. The winning numbers are posted once the draw results have been verified and confirmed. However, we still encourage you to visit the official PCSO website if you still want to verify the game results there.</p>
+    <p id="HowToClaim">The draws are held three times a day, every 11:00 am, 4 pm and 9 pm.</p>
     
-    <h3 style="color:#4B77BE"><strong>How do I claim the money if I win?</strong></h3>
+    <a href="#HowToClaim" title="How to claim Swertres prize?"><h3 style="color:#4B77BE"><strong>How do I claim the money if I win?</strong></h3></a>
     <p>Claiming your winnings is easy. If you win prizes amounting to &#8369;5,000 and below you can claim it at any authorized Lotto outlet or at the PCSO branch offices near you. If you win more than &#8369;5,000 to &#8369;20,000 you can claim it at any of the PCSO branch offices or at the PCSO head office and if you win more than &#8369;20,000, you should go directly to PCSO main office, located at 605 Conservatory Bldg., Shaw Blvrd. Corner Princeton St., Mandaluyong city. For more details about claiming your prize, <a href=""style="color:#2d89ef; text-decoration:none">click here</a>.</p>
 	<br>
 	
