--- a/pcso-lotto-and-games/Swertres.html
+++ b/pcso-lotto-and-games/Swertres.html
@@ -102,7 +102,7 @@ h1{font-size:24px} h2{font-size:24px} h3{font-size:24px} h4{font-size:20px} p, l
 img {display:block; margin:auto; width:50%;} .row:after, row:before {content:""; display:table; clear:both;} @media (min-width:601px){.main{width:74.99999%}.side{width:24.99999%}.half{width:49.99999%}}
 @media (max-width: 600px){h1 {font-size:19px} h2{font-size:19px} h3{font-size:19px} h4{font-size:17px} .ftext{font-size:22px} .half{padding:0;}} .m{margin-left:6px;} .sidenav a { padding: 8px 8px 8px 32px; text-decoration: none; font-size: 25px; color:#f2f2f2; display:block; transition:0.3s;} th, td  {padding:5px 5px}
 .ball {background:#F7DC6F; border-radius: 0.9em; -moz-border-radius: 0.9em; -webkit-border-radius: 0.9em; display: inline-block; font-weight:bold; color:#3a3a3a!important; line-height: 1.8em; margin-right: 8px; text-align: center; width: 1.8em;}
-.footer a {color:#EEEEEE; font-size:13px; text-decoration:none}
+.footer a {color:#EEEEEE; font-size:13px;} a {text-decoration:none}
 </style>
 </head>
 <body>
@@ -268,28 +268,28 @@ function closeNav() {
 <div class="row footer" style="background:#2d89ef">
 <div class="side">
 <h4 style="text-transform:uppercase; color: #EEEEEE; font-size:14px"><b>Latest PCSO lotto results</b></h4>  
- <p><a href="../results-and-winnings.html#58Result">Ultra lotto 6/58</a></p>
- <p><a href="../results-and-winnings.html#55Result">Grand lotto 6/55</a></p>
- <p><a href="../results-and-winnings.html#49Result">Super lotto 6/49</a></p>
- <p><a href="../results-and-winnings.html#45Result">Mega lotto 6/45</a></p>
- <p><a href="../results-and-winnings.html#42Result">Lotto 6/42</a></p>
- <p><a href="../results-and-winnings.html#6DResult">6 Digit lotto</a></p>
- <p><a href="../results-and-winnings.html#4DResult">4 Digit lotto</a></p>
+ <p><a href="../results-and-winnings.html#58Result" title="Ultra Lotto 6/58 result">Ultra lotto 6/58</a></p>
+ <p><a href="../results-and-winnings.html#55Result" title="Grand Lotto 6/55 result">Grand lotto 6/55</a></p>
+ <p><a href="../results-and-winnings.html#49Result" title="Super Lotto 6/49 result">Super lotto 6/49</a></p>
+ <p><a href="../results-and-winnings.html#45Result" title="Mega Lotto 6/45 result">Mega lotto 6/45</a></p>
+ <p><a href="../results-and-winnings.html#42Result" title="Lotto 6/42 result">Lotto 6/42</a></p>
+ <p><a href="../results-and-winnings.html#6DResult" title="6D 6Digit result">6 Digit lotto</a></p>
+ <p><a href="../results-and-winnings.html#4DResult" title="4D 4Digit result">4 Digit lotto</a></p>
  <p><a href="../results-and-winnings.html#SwertresResult">Swertres lotto</a></p>
- <p><a href="../results-and-winnings.html#EZ2Result">EZ 2 lotto</a></p>
+ <p><a href="../results-and-winnings.html#EZ2Result" title="EZ2 result">EZ 2 lotto</a></p>
 </div>
 
 <div class="side">
 	<h4 style="text-transform:uppercase; color: #EEEEEE; font-size:14px"><b>PCSO lotto & games</b></h4>  
-  	<p><a href="Ultra-lotto-6-58.html">Ultra lotto 6/58</a></p>
-  	<p><a href="Grand-lotto-6-55.html">Grand lotto 6/55</a></p>
-	<p><a href="Super-lotto-6-49.html">Super lotto 6/49</a></p>
-	<p><a href="Mega-Lotto-6-45.html">Mega lotto 6/45</a></p>
-	<p><a href="lotto-6-42.html">Lotto 6/42</a></p>
-	<p><a href="6-Digit-Game.html">6 Digit lotto</a></p>
-	<p><a href="4-Digit-Game.html">4 Digit lotto</a></p>
-	<p><a href="Swertres.html">Swertres lotto</a></p>
-	<p><a href="EZ-2.html">EZ 2 lotto</a></p>
+  	<p><a href="Ultra-lotto-6-58.html" title="How to play Ultra Lotto 6/58">Ultra lotto 6/58</a></p>
+  	<p><a href="Grand-lotto-6-55.html" title="How to play Grand Lotto 6/55">Grand lotto 6/55</a></p>
+	<p><a href="Super-lotto-6-49.html" title="How to play Super Lotto 6/49">Super lotto 6/49</a></p>
+	<p><a href="Mega-Lotto-6-45.html" title="How to play Mega Lotto 6/45">Mega lotto 6/45</a></p>
+	<p><a href="lotto-6-42.html" title="How to play Lotto 6/42">Lotto 6/42</a></p>
+	<p><a href="6-Digit-Game.html" title="How to play 6 Digit Game">6 Digit lotto</a></p>
+	<p><a href="4-Digit-Game.html" title="How to play 4 Digit Game">4 Digit lotto</a></p>
+	<p><a href="Swertres.html" title="How to play EZ2 Lotto">Swertres lotto</a></p>
+	<p><a href="EZ-2.html" title="How to play EZ2 Lotto">EZ 2 lotto</a></p>
 </div>
 
 <div class="side">
