--- a/results-and-winnings.html
+++ b/results-and-winnings.html
@@ -114,13 +114,13 @@ function openNav() {
 	<div class="half" style="text-align:center">
 	<img src="images/6-58.png" alt="Ultra lotto 6/58 result"style="width:60%;max-width:120px;">
 	<h2 class="yf"><span itemprop="entry-title"><strong>Ultra lotto 6/58 result</strong></span></h2>
-	<h4><span class="ball">22</span><span class="ball">41</span><span class="ball">9</span><span class="ball">44</span><span class="ball">35</span><span class="ball">46</span></h4>
-    <h4 class="yf"><span itemprop="entry-content"><b>December 26, 2017</b></span></h4>
+	<h4><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span></h4>
+    <h4 class="yf"><span itemprop="entry-content"><b>December 29, 2017</b></span></h4>
 	</div>
 	<div class="half">
 	<div class="jackpot">
-	<h4>Jackpot Prize : &#8369;165,205,844</h4>
-	<h4>Number of Winners : 0</h4>
+	<h4>Jackpot Prize : &#8369;</h4>
+	<h4>Number of Winners : ?</h4>
 	</div><a name="55Result"></a>
 	<h4 style="text-align:center;"><a href="results-and-winnings/Ultra-lotto-6-58-results.html" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">view previous results</a></h4>
 	<br>
@@ -187,13 +187,13 @@ function openNav() {
 	<br>
 	<img src="images/6-45.png" alt="Mega Lotto 6/45 results" style="width:60%;max-width:120px;">
 	<h2 class="yf"><span itemprop="entry-title"><strong>Mega lotto 6/45 result</strong></span></h2>
-	<h4><span class="ball">33</span><span class="ball">22</span><span class="ball">17</span><span class="ball">21</span><span class="ball">35</span><span class="ball">24</span></h4>
-	<h4 class="yf"><span itemprop="entry-content"><b>December 27, 2017</b></span></h4>
+	<h4><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span></h4>
+	<h4 class="yf"><span itemprop="entry-content"><b>December 29, 2017</b></span></h4>
 	</div>
 	<div class="half">
 	<div class="jackpot">
-	<h4>Jackpot Prize : &#8369;8,910,000</h4>
-	<h4>Number of Winners : 0</h4>
+	<h4>Jackpot Prize : &#8369;</h4>
+	<h4>Number of Winners : ?</h4>
 	</div><a name="42Result"></a>
 	<h4 style="text-align:center;"><a href="results-and-winnings/Mega-lotto-6-45-results.html" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">view previous results</a></h4>
 	<br>
@@ -329,8 +329,8 @@ function openNav() {
 	<br>
 	<img src="images/4-Digit.png" alt="PCSO 4-Digit Game result"style="width:60%;max-width:120px;">
 	<h2 class="yf"><span itemprop="entry-title"><strong>4-Digit Game result</strong></span></h2>
-	<h4><span class="ball">5</span>&nbsp;<span class="ball">2</span>&nbsp;<span class="ball">2</span>&nbsp;<span class="ball">4</span></h4>
-	<h4 class="yf"><span itemprop="entry-content"><b>December 27, 2017</b></span></h4>
+	<h4><span class="ball">?</span>&nbsp;<span class="ball">?</span>&nbsp;<span class="ball">?</span>&nbsp;<span class="ball">?</span></h4>
+	<h4 class="yf"><span itemprop="entry-content"><b>December 29, 2017</b></span></h4>
 	</div>
 	<div class="half">
 	<div class="jackpot">
