--- a/results-and-winnings.html
+++ b/results-and-winnings.html
@@ -251,7 +251,7 @@ function openNav() {
 
 	<tr>
 	<td class="yf" style="text-align:center; vertical-align:middle;"><b>4 PM</b></td>
-	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td>
+	<td><span class="ball text-xl">1</span>&nbsp;&nbsp;<span class="ball text-xl">2</span>&nbsp;&nbsp;<span class="ball text-xl">2</span></td>
 	</tr>
 	
 	<!-- SWERTRES 9 PM -->
@@ -306,7 +306,7 @@ function openNav() {
 
 	<tr>
 	<td class="yf" style="text-align:center; vertical-align:middle;"><b>4 PM</b></td>
-	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td>
+	<td><span class="ball text-xl">18</span>&nbsp;&nbsp;<span class="ball text-xl">25</span></td>
 	</tr>
 
 	<!-- EZ 2 - 9 PM -->
