--- a/results-and-winnings.html
+++ b/results-and-winnings.html
@@ -244,7 +244,7 @@ function openNav() {
 
 	<tr>
 	<td class="yf" style="text-align:center; vertical-align:middle;"><b>11:30 AM</b></td>
-	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td>
+	<td><span class="ball text-xl">6</span>&nbsp;&nbsp;<span class="ball text-xl">5</span>&nbsp;&nbsp;<span class="ball text-xl">1</span></td>
 	</tr>
 
 	<!-- SWERTRES 4 PM -->
@@ -299,7 +299,7 @@ function openNav() {
 
 	<tr>
 	<td class="yf" style="text-align:center; vertical-align:middle;"><b>11:30 AM</b></td>
-	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td>
+	<td><span class="ball text-xl">13</span>&nbsp;&nbsp;<span class="ball text-xl">6</span></td>
 	</tr>
 
 	<!-- EZ 2 - 4 PM -->
