--- a/results-and-winnings/Swertres-results.html
+++ b/results-and-winnings/Swertres-results.html
@@ -107,7 +107,7 @@ function openNav() {
 	<tr><td>12:30 PM</td>
 	<td><span class="ball text-xl">5</span>&nbsp;&nbsp;<span class="ball text-xl">3</span>&nbsp;&nbsp;<span class="ball text-xl">1</span></td></tr>
 	<tr><td>2:00 PM</td>
-	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td></tr>
+	<td><span class="ball text-xl">0</span>&nbsp;&nbsp;<span class="ball text-xl">9</span>&nbsp;&nbsp;<span class="ball text-xl">5</span></td></tr>
 	</table>
 	
 	<p>To win, you need to match correctly all the three (3) winning numbers in <b>exact</b> order.</p>
