--- a/results-and-winnings/EZ-2-lotto-results.html
+++ b/results-and-winnings/EZ-2-lotto-results.html
@@ -105,7 +105,7 @@ function openNav() {
 	<tr><td>11 AM</td>
 	<td><span class="ball text-xl">16</span>&nbsp;&nbsp;<span class="ball text-xl">27</span></td></tr>
 	<tr><td>4 PM</td>
-	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td></tr>
+	<td><span class="ball text-xl">14</span>&nbsp;&nbsp;<span class="ball text-xl">4</span></td></tr>
 	<tr><td>9 PM</td>
 	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td></tr>
 	</table>
