--- a/Index.html
+++ b/Index.html
@@ -109,7 +109,7 @@ function closeNav() {
     <img src="images/6-58.png" alt="PCSO Ultra Lotto 6-58" style="width:100%; max-width:150px;">
     <br>
     <br>
-    <div class="container yf" style="text-align:center; background:#fff; border-radius:0 0 6px 6px"><h2><strong>PCSO Ultra Lotto 6/58</strong></h2>
+    <div class="container yf" style="text-align:center; background:#fff; border-radius:0 0 6px 6px"><h2><strong>Ultra Lotto 6/58</strong></h2>
     <h4 style="text-align:center;"><a href="pcso-lotto-and-games/Ultra-lotto-6-58.html" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">how to play Ultra Lotto</a></h4>
     <h4 style="text-align:center;"><a href="results-and-winnings.html#58Result" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">view latest result</a></h4>
     <br>
@@ -123,7 +123,7 @@ function closeNav() {
     <img src="images/6-55.png" alt="PCSO Grand Lotto 6/55" style="width:100%; max-width:150px;">
     <br>
     <br>
-    <div class="container yf" style="text-align:center; background:#fff; border-radius:0 0 6px 6px"><h2><strong>PCSO Grand Lotto 6/55</strong></h2>
+    <div class="container yf" style="text-align:center; background:#fff; border-radius:0 0 6px 6px"><h2><strong>Grand Lotto 6/55</strong></h2>
     <h4 style="text-align:center;"><a href="pcso-lotto-and-games/Grand-lotto-6-55.html" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">how to play Grand Lotto</a></h4>
     <h4 style="text-align:center;"><a href="results-and-winnings.html#55Result" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">view latest result</a></h4>
     <br>
@@ -137,7 +137,7 @@ function closeNav() {
     <img src="images/6-49.png" alt="PCSO Super Lotto 6/49" style="width:100%; max-width:150px;">
     <br>
     <br>
-    <div class="container yf" style="text-align:center; background:#fff; border-radius:0 0 6px 6px"><h2><strong>PCSO Super Lotto 6/49</strong></h2>
+    <div class="container yf" style="text-align:center; background:#fff; border-radius:0 0 6px 6px"><h2><strong>Super Lotto 6/49</strong></h2>
     <h4 style="text-align:center;"><a href="pcso-lotto-and-games/Super-lotto-6-49.html" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">how to play Super Lotto</a></h4>
     <h4 style="text-align:center;"><a href="results-and-winnings.html#49Result" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">view latest result</a></h4>
     <br>
@@ -153,7 +153,7 @@ function closeNav() {
     <img src="images/6-45.png" alt="PCSO Mega Lotto 6/45" style="width:100%; max-width:150px;">
     <br>
     <br>
-    <div class="container yf" style="text-align:center; background:#fff; border-radius:0 0 6px 6px"><h2><strong>PCSO Mega Lotto 6/45</strong></h2>
+    <div class="container yf" style="text-align:center; background:#fff; border-radius:0 0 6px 6px"><h2><strong>Mega Lotto 6/45</strong></h2>
     <h4 style="text-align:center;"><a href="pcso-lotto-and-games/Mega-Lotto-6-45.html" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">how to play Mega Lotto</a></h4>
     <h4 style="text-align:center;"><a href="results-and-winnings.html#45Result" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">view latest result</a></h4>
     <br>
@@ -167,7 +167,7 @@ function closeNav() {
     <img src="images/6-42.png" alt="PCSO Lotto 6/42" style="width:100%; max-width:150px;">
     <br>
     <br>
-    <div class="container yf" style="text-align:center; background:#fff; border-radius:0 0 6px 6px"><h2><strong>PCSO Lotto 6/42</strong></h2>
+    <div class="container yf" style="text-align:center; background:#fff; border-radius:0 0 6px 6px"><h2><strong>Lotto 6/42</strong></h2>
     <h4 style="text-align:center;"><a href="pcso-lotto-and-games/lotto-6-42.html" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">how to play Lotto 6/42</a></h4>
     <h4 style="text-align:center;"><a href="results-and-winnings.html#42Result" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">view latest result</a></h4>
     <br>
@@ -181,7 +181,7 @@ function closeNav() {
     <img src="images/EZ2-lotto.png" alt="PCSO EZ2 Lotto" style="width:100%; max-width:150px;">
     <br>
     <br>
-    <div class="container yf" style="text-align:center; background:#fff; border-radius:0 0 6px 6px"><h2><strong>PCSO EZ 2 lotto</strong></h2>
+    <div class="container yf" style="text-align:center; background:#fff; border-radius:0 0 6px 6px"><h2><strong>EZ 2 lotto</strong></h2>
     <h4 style="text-align:center;"><a href="pcso-lotto-and-games/EZ-2.html" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">how to play EZ2 Lotto</a></h4>
     <h4 style="text-align:center;"><a href="results-and-winnings.html#EZ2Result" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">view latest result</a></h4>
     <br>
@@ -197,7 +197,7 @@ function closeNav() {
     <img src="images/pcsoswertres.png" alt="PCSO Lotto 6/42" style="width:100%; max-width:150px;">
     <br>
     <br>
-    <div class="container yf" style="text-align:center; background:#fff; border-radius:0 0 6px 6px"><h2><strong>PCSO Swertres</strong></h2>
+    <div class="container yf" style="text-align:center; background:#fff; border-radius:0 0 6px 6px"><h2><strong>Swertres</strong></h2>
     <h4 style="text-align:center;"><a href="pcso-lotto-and-games/Swertres.html" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">how to play Swertres</a></h4>
     <h4 style="text-align:center;"><a href="results-and-winnings.html#SwertresResult" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">view latest result</a></h4>
     <br>
@@ -211,7 +211,7 @@ function closeNav() {
     <img src="images/4digit.png" alt="PCSO Lotto 6/42" style="width:100%; max-width:150px;">
     <br>
     <br>
-    <div class="container yf" style="text-align:center; background:#fff; border-radius:0 0 6px 6px"><h2><strong>PCSO 4 Digit Game</strong></h2>
+    <div class="container yf" style="text-align:center; background:#fff; border-radius:0 0 6px 6px"><h2><strong>4 Digit Game</strong></h2>
     <h4 style="text-align:center;"><a href="pcso-lotto-and-games/4-Digit-Game.html" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">how to play 4 Digit Game</a></h4>
     <h4 style="text-align:center;"><a href="results-and-winnings.html#4DResult" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">view latest result</a></h4>
     <br>
@@ -225,7 +225,7 @@ function closeNav() {
     <img src="images/6-digit.png" alt="PCSO Lotto 6/42" style="width:100%; max-width:150px;">
     <br>
     <br>
-    <div class="container yf" style="text-align:center; background:#fff; border-radius:0 0 6px 6px"><h2><strong>PCSO 6 Digit Game</strong></h2>
+    <div class="container yf" style="text-align:center; background:#fff; border-radius:0 0 6px 6px"><h2><strong>6 Digit Game</strong></h2>
     <h4 style="text-align:center;"><a href="pcso-lotto-and-games/6-Digit-Game.html" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">how to play 6 Digit Game</a></h4>
     <h4 style="text-align:center;"><a href="results-and-winnings.html#6DResult" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">view latest result</a></h4>
     <br>
