--- a/pcso-lotto-and-games/How-to-Franchise-Jollibee-in-the-Philippines.html
+++ b/pcso-lotto-and-games/How-to-Franchise-Jollibee-in-the-Philippines.html
@@ -165,7 +165,7 @@ function closeNav() {
 	<a href="https://facebook.com/sharer.php?u=https://yup.ph" style="margin-right:10px; display:inline-block; background:#167EFB; box-shadow:0 2.5px 5px 0 rgba(0,0,0,0.16); border-radius:6px; width:33%; font-size:13px; text-align:center"><b>facebook</b></a>
 	<a href="https://plus.google.com/share?url=https://yup.ph" style="background:#e84118; box-shadow:0 2.5px 5px 0 rgba(0,0,0,0.16); border-radius:6px; width:33%; font-size:13px; text-align:center"><b>Google+</b></a>
 	</div><br>
-	<img src="../../images/Jollibee.jpg" alt="Does God Know the Exact Day I Will Die?" style="width:100%; max-width:1400px;"><br>
+	<img src="../images/6-58-how.png" alt="Does God Know the Exact Day I Will Die?" style="width:100%; max-width:1400px;"><br>
 	
     <h3 style="color:#4B77BE;">Have a Slice of Our Success</h3>
     <p>Joining the Jollibee Group is a winning investment. Through the years, we have developed into a company with the image that prizes customers above anything else. This is due to the fact that we are always up to date with current consumer trends, keeping a keen eye to what our customers are looking for. We constantly introduce new products, we keep in touch with our customers through various programs and promotion and we develop marketing campaigns that touch our customers’ sentiments.</p>
@@ -269,27 +269,27 @@ function closeNav() {
     <div class="row">
     <div style="width:100%; height:100px; border-top:1px solid #ccc;">
     <div style="width:40%; padding:16px; float:left;">
-    <a href=""><img src="../../images/does-god-know-the-exact-day-i-will-die.jpg" alt="Does God Know the Exact Day I Will Die?" style="width:100%"></a></div>
+    <a href=""><img src="../images/6-58-how.png" alt="Does God Know the Exact Day I Will Die?" style="width:100%"></a></div>
     <div style=" width:60%; float:left;"><p><a href="" class="sp">How to Franchise Greenwich?</a></p></div>
     </div>
     <div style="width:100%; height:100px; border-top:1px solid #ccc;">
     <div style="width:40%; padding:16px; float:left;">
-    <a href=""><img src="../../images/does-god-know-the-exact-day-i-will-die.jpg" alt="Does God Know the Exact Day I Will Die?" style="width:100%"></a></div>
+    <a href=""><img src="../images/6-58-how.png" alt="Does God Know the Exact Day I Will Die?" style="width:100%"></a></div>
     <div style=" width:60%; float:left;"><p><a href="" class="sp">How to Franchise Chowking?</a></p></div>
     </div>
     <div style="width:100%; height:100px; border-top:1px solid #ccc;">
     <div style="width:40%; padding:16px; float:left;">
-    <a href=""><img src="../../images/does-god-know-the-exact-day-i-will-die.jpg" alt="Does God Know the Exact Day I Will Die?" style="width:100%"></a></div>
+    <a href=""><img src="../images/6-58-how.png" alt="Does God Know the Exact Day I Will Die?" style="width:100%"></a></div>
     <div style=" width:60%; float:left;"><p><a href="" class="sp">How to Franchise Red Ribbon?</a></p></div>
     </div>
     <div style="width:100%; height:100px; border-top:1px solid #ccc;">
     <div style="width:40%; padding:16px; float:left;">
-    <a href=""><img src="../../images/does-god-know-the-exact-day-i-will-die.jpg" alt="Does God Know the Exact Day I Will Die?" style="width:100%"></a></div>
+    <a href=""><img src="../images/6-58-how.png" alt="Does God Know the Exact Day I Will Die?" style="width:100%"></a></div>
     <div style=" width:60%; float:left;"><p><a href="" class="sp">How to Franchise Mang Inasal?</a></p></div>
     </div>
     <div style="width:100%; height:100px; border-top:1px solid #ccc;">
     <div style="width:40%; padding:16px; float:left;">
-    <a href=""><img src="../../images/does-god-know-the-exact-day-i-will-die.jpg" alt="Does God Know the Exact Day I Will Die?" style="width:100%"></a></div>
+    <a href=""><img src="../images/6-58-how.png" alt="Does God Know the Exact Day I Will Die?" style="width:100%"></a></div>
     <div style=" width:60%; float:left;"><p><a href="" class="sp">How to Franchise Burger King?</a></p></div>
     </div></div>
 	</div></div>
