--- a/pcso-lotto-and-games/How-to-Franchise-Jollibee-in-the-Philippines.html
+++ b/pcso-lotto-and-games/How-to-Franchise-Jollibee-in-the-Philippines.html
@@ -275,7 +275,7 @@ function closeNav() {
 	       
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <ins class="adsbygoogle"
-    style="display:block; height:110px; border-top:1px solid #ccc; border-bottom:1px solid #ccc;"
+    style="display:block; height:110px; margin:auto; border-top:1px solid #ccc; border-bottom:1px solid #ccc;"
     data-ad-format="fluid"
     data-ad-layout-key="-hk+i-24-7k+mb"
     data-ad-client="ca-pub-8489405167836126"
